<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtVHowMuch"
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/txtVHowMuch"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEDTWeight"
        android:layout_width="266dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weightLBS"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVHowMuch" />

    <TextView
        android:id="@+id/txtPlanetWeight"
        android:layout_width="313dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="348dp"
        android:gravity="center"
        android:text=" "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkMecury"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkMercury_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkVenus"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkVenus_Text"
        app:layout_constraintStart_toEndOf="@+id/chkMecury"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkMars"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="112dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkMars_Text"
        app:layout_constraintStart_toEndOf="@+id/chkVenus"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkJupiter"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkJupiter_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkMecury" />

    <CheckBox
        android:id="@+id/chkSaturn"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkSaturn_Text"
        app:layout_constraintStart_toEndOf="@+id/chkJupiter"
        app:layout_constraintTop_toBottomOf="@+id/chkVenus" />

    <CheckBox
        android:id="@+id/chkUranus"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkUranus_Text"
        app:layout_constraintStart_toEndOf="@+id/chkSaturn"
        app:layout_constraintTop_toBottomOf="@+id/chkMars" />

    <CheckBox
        android:id="@+id/chkNeptune"
        android:layout_width="96dp"
        android:layout_height="33dp"
        android:layout_marginLeft="108dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="208dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkNeptune_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkPluto"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="208dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/chkPluto_Text"
        app:layout_constraintStart_toEndOf="@+id/chkNeptune"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>